# Codebook

./: .gitignore  CHANGELOG.md  CodeBook-可执行开发手册-v2.xlsx  CodeBook_M1开发规划_20260323.xlsx  CodeBook_M2开发规划_20260324.xlsx  CodeBook_MCP_Startup_Guide.docx  CodeBook_QuickStart.docx  CodeBook_v2.1_工程计划.docx  CodeBook_产品战略讨论纪要_20260322.docx  CodeBook_安装指南.md  CodeBook_开发手册_v4.xlsx  CodeBook_技术战略与架构规划_20260323.docx  DEV_LOG.md  README.md  ShipSwift-项目拆解.html  conduit.md  locate-demo-output.md  mcp-server-acceptance-report.md  run_a2_pressure_test.py  run_a2_single_project.py  run_a2_with_diagnostics.py
codebook-tasks/: CHECKPOINTS.md  checkpoint.sh  dispatcher.sh
mcp-server/: CLAUDE.md  README.md  pyproject.toml
mcp-server/docs/: native-extractor-guide.md  sprint3_mermaid_layered_design.md  validation-issues-v0.1.md
mcp-server/docs/superpowers/plans/: 2026-04-05-blueprint-v2-phase1-data.md  2026-04-05-blueprint-v2-phase2-canvas.md
mcp-server/docs/superpowers/specs/: 2026-04-05-blueprint-v2-design.md
mcp-server/domain_packs/: fintech.json  general.json  healthcare.json
mcp-server/skills/codebook-debugging/: SKILL.md
mcp-server/skills/codebook-dev-workflow/: SKILL.md
mcp-server/skills/codebook-tdd/: SKILL.md
mcp-server/src/: __init__.py  cli.py  config.py  server.py
mcp-server/src/diagnoser/: __init__.py
mcp-server/src/glossary/: __init__.py  term_resolver.py  term_store.py
mcp-server/src/memory/: __init__.py  migration.py  models.py  project_memory.py
mcp-server/src/parsers/: __init__.py  ast_parser.py  dependency_graph.py  module_grouper.py  regex_extractor.py  repo_cloner.py
mcp-server/src/parsers/native_extractors/: __init__.py  base.py  python_ast.py
mcp-server/src/prompts/: __init__.py
mcp-server/src/summarizer/: __init__.py  blueprint_summary.py  business_namer.py  engine.py  flow_extractor.py
mcp-server/src/tools/: __init__.py  _repo_cache.py  ask_about.py  blueprint_renderer.py  blueprint_renderer_v2.py  canvas_layout.py  codebook_explore.py  codegen.py  codegen_engine.py  diagnose.py  diff_validator.py  memory_feedback.py  read_chapter.py  report_template.jsx  save_blueprint_summary.py  scan_repo.py  summarize_for_blueprint.py  term_correct.py
mcp-server/src/watcher/: __init__.py  file_hasher.py  incremental_scanner.py  watch_daemon.py
mcp-server/test_results/: codegen.json  diagnose.json  diagnose_detailed.json  integration_part_a.md  scan_repo.json  stats.json  superpowers_perf.json
mcp-server/test_results/fastapi/: read_chapter.json  read_chapter_detailed.json  stats.json
mcp-server/test_results/nextjs/: stats.json
mcp-server/test_results/sentry-python/: ask_about.json  stats.json
mcp-server/test_results/vscode/: scan_repo.json  stats.json
mcp-server/tests/: conftest.py  test_acceptance.py  test_ask_about.py  test_blueprint_interactive.py  test_blueprint_renderer_v2.py  test_blueprint_summary.py  test_business_namer.py  test_canvas_layout.py  test_cli.py  test_codebook_explore.py  test_codegen_acceptance.py  test_d3_memory_integration.py  test_dependency_graph_index.py  test_dependency_graph_layered.py  test_diagnose.py  test_e2e.py  test_file_hasher.py  test_flow_extractor.py  test_glossary.py  test_incremental_scanner.py  test_integration_w6_1a.py  test_migration.py  test_native_ast_extractor.py  test_parse_perf.py  test_parsers.py  test_parsers_mock_conduit.py  test_project_memory.py  test_regex_fallback.py  test_repo_cache_compat.py  test_role_system_v0_3.py  test_server.py  test_server_mock_conduit.py  test_smart_memory.py  test_sprint3_graph.py  test_summarize_tools.py  test_summarizer.py  test_summarizer_mock_conduit.py  test_term_correct.py  test_watch_daemon.py
(+69 files in other folders)
