[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codebook-mcp"
version = "0.2.0"
description = "CodeBook — 让不会写代码的人也能理解、诊断和修改软件产品。一键安装的 MCP Server。"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["mcp", "code-understanding", "ai-tools", "claude", "cursor", "codebook"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Documentation",
]
dependencies = [
    "mcp[cli]>=1.2.0",
    "structlog>=24.1.0",
    "pydantic-settings>=2.1.0",
    "networkx>=3.0",
    "tree-sitter-language-pack>=1.0.0",
]

[project.optional-dependencies]
full = [
    # tree-sitter-language-pack 已提升为核心依赖
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pyyaml>=6.0",
]

[project.scripts]
codebook = "src.cli:cli_main"
codebook-server = "src.server:main"

[project.urls]
Homepage = "https://github.com/JAAAACY/Codebook"
Repository = "https://github.com/JAAAACY/Codebook"
Issues = "https://github.com/JAAAACY/Codebook/issues"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
